# routes/categoryRoutes.js
@@ -6,17 +6,107 @@ const categoryController = require("../controllers/categoryController");
  * @swagger
  * tags:
  *   name: Categories
- *   description: Управление категориями книг
+ *   description: Категории книг
  */
 
-router.post("/categories", categoryController.createCategory);
+/**
+ * @swagger
+ * /api/categories:
+ *   post:
+ *     summary: Создать категорию
+ *     tags: [Categories]
+ *     requestBody:
+ *       required: true
+ *       content:
+ *         application/json:
+ *           schema:
+ *             type: object
+ *             properties:
+ *               name:
+ *                 type: string
+ *     responses:
+ *       201:
+ *         description: Категория создана
+ *       409:
+ *         description: Категория уже существует
+ */
+router.post("/api//categories", categoryController.createCategory);
 
-router.get("/categories", categoryController.getAllCategories);
+/**
+ * @swagger
+ * /api/categories:
+ *   get:
+ *     summary: Получить все категории
+ *     tags: [Categories]
+ *     responses:
+ *       200:
+ *         description: Список категорий
+ */
+router.get("/api//categories", categoryController.getAllCategories);
 
-router.get("/categories/:id", categoryController.getCategoryById);
+/**
+ * @swagger
+ * /api/categories/{id}:
+ *   get:
+ *     summary: Получить категорию по ID
+ *     tags: [Categories]
+ *     parameters:
+ *       - in: path
+ *         name: id
+ *         schema:
+ *           type: integer
+ *         required: true
+ *     responses:
+ *       200:
+ *         description: Категория найдена
+ *       404:
+ *         description: Не найдено
+ */
+router.get("/api//categories/:id", categoryController.getCategoryById);
 
-router.put("/categories/:id", categoryController.updateCategory);
+/**
+ * @swagger
+ * /api/categories/{id}:
+ *   put:
+ *     summary: Обновить категорию
+ *     tags: [Categories]
+ *     parameters:
+ *       - in: path
+ *         name: id
+ *         required: true
+ *         schema:
+ *           type: integer
+ *     requestBody:
+ *       required: true
+ *       content:
+ *         application/json:
+ *           schema:
+ *             type: object
+ *             properties:
+ *               name:
+ *                 type: string
+ *     responses:
+ *       200:
+ *         description: Категория обновлена
+ */
+router.put("/api//categories/:id", categoryController.updateCategory);
 
-router.delete("/categories/:id", categoryController.deleteCategory);
+/**
+ * @swagger
+ * /api/categories/{id}:
+ *   delete:
+ *     summary: Удалить категорию
+ *     tags: [Categories]
+ *     parameters:
+ *       - in: path
+ *         name: id
+ *         required: true
+ *         schema:
+ *           type: integer
+ *     responses:
+ *       204:
+ *         description: Успешное удаление
+ */
+router.delete("/api//categories/:id", categoryController.deleteCategory);
 
 module.exports = router;
