# swagger.json
@@ -2,7 +2,7 @@
   "swagger": "2.0",
   "info": {
     "title": "Library API Documentation",
-    "description": "Автогенерируемая документация для backend-практики",
+    "description": "Документация для системы книг, авторов и комментариев",
     "version": "1.0.0"
   },
   "host": "localhost:3000",
@@ -39,19 +39,10 @@
             "schema": {
               "type": "object",
               "properties": {
-                "book_title": {
+                "first_name": {
                   "example": "any"
                 },
-                "book_description": {
-                  "example": "any"
-                },
-                "publication_year": {
-                  "example": "any"
-                },
-                "category_id": {
-                  "example": "any"
-                },
-                "author_ids": {
+                "last_name": {
                   "example": "any"
                 }
               }
@@ -101,6 +92,120 @@
             "schema": {
               "type": "object",
               "properties": {
+                "first_name": {
+                  "example": "any"
+                },
+                "last_name": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/books": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "book_title": {
+                  "example": "any"
+                },
+                "book_description": {
+                  "example": "any"
+                },
+                "publication_year": {
+                  "example": "any"
+                },
+                "category_id": {
+                  "example": "any"
+                },
+                "author_ids": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/books/{id}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "put": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
                 "book_title": {
                   "example": "any"
                 },
@@ -135,28 +240,6 @@
           }
         }
       },
-      "get": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      },
       "delete": {
         "description": "",
         "parameters": [
@@ -180,7 +263,7 @@
         }
       }
     },
-    "/categories": {
+    "/api/*categories": {
       "post": {
         "description": "",
         "parameters": [
@@ -224,7 +307,7 @@
         }
       }
     },
-    "/categories/{id}": {
+    "/api/*categories/{id}": {
       "get": {
         "description": "",
         "parameters": [
@@ -307,7 +390,7 @@
         }
       }
     },
-    "/books/{bookId}/comments": {
+    "/api/books/{bookId}/comments": {
       "post": {
         "description": "",
         "parameters": [
@@ -365,7 +448,7 @@
         }
       }
     },
-    "/comments/{id}": {
+    "/api/comments/{id}": {
       "get": {
         "description": "",
         "parameters": [
